...
                message: 'Random event sent successfully',
                type: 'success',
              });
            }}
          />
          <Button
            testID="custom_event_button"
            title="Track an Event"
            onPress={() => navigation.navigate('Track')}
          />
          <Button
            title="Set Profile Attributes"
            onPress={() => {
...
            title="Set Device Attributes"
            onPress={() => {
              navigation.navigate(CustomDeviceAttrScreenName);
            }}
          />
          <Button
            testID="push_permission_button"
            title="Request Push Notification Permission"
            onPress={async () => {
              const permission =
                await onPushNotificationRequestPermissionButtonPress();
              if (permission === CioPushPermissionStatus.Granted) {
                showMessage({
...
